Now more closely follows the requirements
